--- a/.env.example
+++ b/.env.example
@@ -37,10 +37,11 @@ MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="${APP_NAME}"
 
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
+AWS_ACCESS_KEY_ID=AKIA4VMDPONXARAW7YRW
+AWS_SECRET_ACCESS_KEY=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
+AWS_DEFAULT_REGION=ap-southeast-1
+AWS_BUCKET=table-local
+AWS_ENDPOINT=https://s3.amazonaws.com
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 PUSHER_APP_ID=
