--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.7",
         "league/flysystem-aws-s3-v3": "^3.0",
-        "prettus/l5-repository": "^2.9"
+        "prettus/l5-repository": "^2.9",
+        "spatie/laravel-permission": "^5.10"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.13",
