--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/tinker": "^2.7",
         "league/flysystem-aws-s3-v3": "^3.0",
         "prettus/l5-repository": "^2.9",
+        "simplesoftwareio/simple-qrcode": "~4",
         "spatie/laravel-permission": "^5.10"
     },
     "require-dev": {
