--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.7",
         "league/flysystem-aws-s3-v3": "^3.0",
+        "maatwebsite/excel": "^3.1",
         "prettus/l5-repository": "^2.9",
         "simplesoftwareio/simple-qrcode": "~4",
         "spatie/laravel-permission": "^5.10"
@@ -24,6 +25,7 @@
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.13",
         "fakerphp/faker": "^1.9.1",
+        "laravel/pint": "^1.13",
         "laravel/sail": "^1.22",
         "laravel/telescope": "^4.14",
         "mockery/mockery": "^1.4.4",
